--- a/css/custom.css
+++ b/css/custom.css
@@ -37,6 +37,13 @@ body {
 	font-size: 1.5em;
 }
 
+.logos img {
+	margin: 20px;
+	margin-bottom: 0px;
+	height: 50px;
+	width: auto;
+}
+
 /*create bubbles for each section, fit text neatly inside */
 
 .name {
